# nemo

./: LICENSE  README.md  pyproject.toml  requirements.txt
nemosyne/: S3.py  config.py  main.py  uploader.py
tests/: test_nemosyne.py
