[tool.poetry]
name = "nemosyne"
version = "0.0.1"
description = "nemosyne (aka [Mnemosyne](https://en.wikipedia.org/wiki/Mnemosyne)) is an S3 command-line manager.WIP"
authors = ["Ali Tavallaie <a.tavallaie@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
nemosyne = "nemosyne.main:app"

[tool.poetry.dependencies]
python = "^3.8"
appdirs = "1.4.3"
boto3 = "1.17.96"
botocore = "1.20.96"
CacheControl = "0.12.6"
certifi = "2019.11.28"
chardet = "3.0.4"
click = "7.1.2"
colorama = "0.4.3"
contextlib2 = "0.6.0"
distlib = "0.3.0"
distro = "1.4.0"
html5lib = "1.0.1"
idna = "2.8"
ipaddr = "2.2.0"
jmespath = "0.10.0"
lockfile = "0.12.2"
msgpack = "0.6.2"
packaging = "20.3"
pep517 = "0.8.2"
progress = "1.5"
pyparsing = "2.4.6"
python-dateutil = "2.8.1"
python-dotenv = "0.17.1"
pytoml = "0.1.21"
requests = "2.22.0"
retrying = "1.3.3"
s3transfer = "0.4.2"
six = "1.14.0"
typer = "0.3.2"
urllib3 = "1.25.8"
webencodings = "0.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
